TEST_PROGRAMS/INVALID/xoey_zhang/invalid_if.min
if checked then
else
	x = 123;
